ircv3_parse_derive/tests/ui/fail/not_implementation_nested_to_message_fail.stderr
error: field `tag` requires an IRC attribute for ToMessage serialization
 --> tests/ui/fail/not_implementation_nested_to_message_fail.rs:7:5
  |
7 |     tag: Option<Tag>,
  |     ^^^^^^^^^^^^^^^^
